--- a/package.json
+++ b/package.json
@@ -16,19 +16,21 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.3.3",
     "expo": "~47.0.3",
+    "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
+    "lodash.isequal": "^4.5.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-navigation": "^4.4.4",
-    "react-redux": "^8.0.5",
-    "expo-linear-gradient": "~12.0.1",
-    "react-native-maps": "1.3.2"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
