--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
     "react-native-reanimated": "~2.12.0",
-    "expo-location": "~15.0.1"
+    "expo-location": "~15.0.1",
+    "expo-constants": "~14.0.2",
+    "expo-font": "~11.0.1",
+    "expo-asset": "~8.7.0",
+    "expo-splash-screen": "~0.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
