--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.3.3",
     "expo": "~47.0.3",
+    "expo-asset": "~8.7.0",
+    "expo-constants": "~14.0.2",
+    "expo-font": "~11.0.1",
     "expo-linear-gradient": "~12.0.1",
+    "expo-location": "~15.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
     "lodash.isequal": "^4.5.0",
@@ -28,16 +33,11 @@
     "react-native": "0.70.5",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-maps": "1.3.2",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-navigation": "^4.4.4",
-    "react-redux": "^8.0.5",
-    "react-native-reanimated": "~2.12.0",
-    "expo-location": "~15.0.1",
-    "expo-constants": "~14.0.2",
-    "expo-font": "~11.0.1",
-    "expo-asset": "~8.7.0",
-    "expo-splash-screen": "~0.17.5"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
