--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-material/core": "^1.3.7",
-    "@react-native-picker/picker": "^2.4.9",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.6.1",
     "@react-navigation/native": "^6.0.13",
@@ -31,7 +31,7 @@
     "lodash.isequal": "^4.5.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.12.0",
