--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/slider": "4.2.4",
     "@react-native-material/core": "^1.3.7",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
@@ -23,6 +24,7 @@
     "expo-asset": "~8.7.0",
     "expo-constants": "~14.0.2",
     "expo-font": "~11.0.1",
+    "expo-image": "^1.2.1",
     "expo-linear-gradient": "~12.0.1",
     "expo-location": "~15.0.1",
     "expo-splash-screen": "~0.17.5",
