--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-native-screens": "~3.18.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
-    "@react-native-community/datetimepicker": "6.5.2"
+    "@react-native-community/datetimepicker": "6.5.2",
+    "expo-image-picker": "~14.0.2",
+    "expo-checkbox": "~2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
